# Django-Tree-Menu

./: README.md  pyproject.toml
core/: settings.py  urls.py
docker/local/: Dockerfile  docker-compose.yaml  entrypoint.sh
menus/: admin.py  models.py  urls.py  views.py
menus/templatetags/: menu.py
static/css/: style.css
templates/: index.html  menu.html
